--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,9 +66,6 @@ li {
     /* Do not repeat the image */
     background-size: cover;
     /* Resize the background image to cover the entire container */
-    /* position: absolute;
-    bottom: 0;
-    z-index: 1; */
 }
 
 .cloudFront {
@@ -186,7 +183,7 @@ li {
 .about {
     background-color: white;
     width: 100vw;
-    height: 100vh;
+    height: 80vh;
     position: absolute;
     top: 100vh;
     z-index: 6;
@@ -214,7 +211,19 @@ h1 {
 }
 
 .create-your-rocket {
+    margin-top: 60vh;
     width: 100vw;
-    height: 100vh;
-    background-color: rgb(25, 144, 212);
+    height: 60vh;
+    background-color: gainsboro;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    z-index: 6;
+}
+
+.floating-box {
+    width: 20vw;
+    height: 35vh;
+    background-color: ghostwhite;
 }
